--- a/linuxdoom-1.10/Makefile
+++ b/linuxdoom-1.10/Makefile
@@ -4,11 +4,12 @@
 #
 # $Log:$
 #
-CC= gcc -m32  # gcc or g++
+CC= gcc # gcc or g++
 
-CFLAGS=-g -Wall -DNORMALUNIX -DLINUX # -DUSEASM 
+CFLAGS= -m32 -g -Wall -DNORMALUNIX -DLINUX # -DUSEASM 
 LDFLAGS=-L/usr/X11R6/lib
-LIBS=-lXext -lX11 -lnsl -lm
+LIBS=-lXext -lX11 -lm #-lnsl 
+
 
 # subdirectory for objects
 O=linux
